--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="icon.ico"/>
     <link rel="stylesheet" href="style.css" />
     <title>TODO LIST</title>
   </head>
